fix: change primary color to enhance contrast

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -17,10 +17,10 @@
     scroll-behavior: smooth;
 }
 .primary-text {
-    color: #EC5800;
+    color: #241E59;
 }
 .primary-bg {
-    background-color: #EC5800;
+    background-color: #241E59;
 }
 .secondary-text {
     color: #D4D2EC;
